Giant refactor + Kurzweil file reader